# storedsafe-python

./: .gitignore  COPYING  README.md  pyproject.toml  setup.py
storedsafe/: __init__.py
storedsafe.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_auth.py  test_object.py  test_template.py  test_user.py  test_utils.py  test_vault.py
tests/mocks/: __init__.py  mock_auth.py  mock_object.py  mock_response.py  mock_template.py  mock_user.py  mock_utils.py  mock_vault.py
