[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "storedsafe"
version = "1.3.0"
authors = [
  { name="Oscar Mattsson", email="oscar@storedsafe.com" },
]
description = "Wrapper for the StoredSafe REST-like API."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/storedsafe/storedsafe-python"
Issues = "https://github.com/storedsafe/storedsafe-python/issues"
